# icip2025

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  00_plotting.ipynb  00_results.ipynb  01_START_HERE.ipynb  01_model_initialization.ipynb  02_tokenization_frames.ipynb  02_tokenization_natural_flag.ipynb  03_concept_vs_word_flags_relationship.ipynb  03_concept_vs_word_frames_relationship.ipynb  04_model_family_concept_space_comparison.ipynb  05_guided_generation_samples.ipynb  06_guided_generation_top_k_ablation.ipynb  07_guided_generation_language_ablation.ipynb  08_guided_generation_model_comparison.ipynb  09_guided_generation_language_topk_ablation.ipynb  10_language_vision_analysis.ipynb  10_language_vision_qualitative_results.ipynb  11_vision_concept_classification.ipynb  12_figstep_visual_dataset.ipynb  12_harmful_visual_dataset.ipynb  13_figstep_cgd_multiple_languages.ipynb  13_figstep_visual_dataset.ipynb  13_multiple_languages_dataset_auto_translation copy.ipynb  13_multiple_languages_dataset_auto_translation.ipynb  14_multilang_figstep_analysis.ipynb  CLAUDE.md  LICENSE  README.md  Translated SafeBench verified 2025-01-12.xlsx  index.html  makefile  models.yaml  multilang-safebench.parquet  pyproject.toml  qsub.sh  result.parquet  results.shelf.db  (+1 more)
flags/abstract/: base_model.py
flags/linalg/: matrix.py
flags/lrh/: __init__.py  flag_representation.py  unembedding_representation.py
flags/models/: __init__.py  hf.py
flags/nlp/: datasets.py  synsets.py
flags/utils/: memory.py  plotting.py  settings.py  stdlib.py
(+28 files in other folders)
